# tsundoku

./: .gitignore  .travis.yml  LICENSE  README.md  package.yaml  release.nix  tsundoku.cabal
app/: Main.hs
docs/: issues.md  manual.md  reasoning.md
src/: Tsundoku.hs
src/Tsundoku/: Book.hs  Command.hs  IO.hs  Pile.hs  Pretty.hs  Verb.hs
src/Tsundoku/Command/: Add.hs  Bump.hs  Details.hs  Init.hs  List.hs  Path.hs  Remove.hs  Status.hs  Tag.hs  Template.hs
src/Tsundoku/Verb/: Add.hs  Details.hs  Init.hs  List.hs  Path.hs  Remove.hs  Status.hs  Tag.hs
test/Tsundoku/: BookSpec.hs  IOSpec.hs  PileSpec.hs
test/testfiles/: pile1.json
