name:                tsundoku
version:             0.0.0.0
synopsis:            Tsundoku tracks your piles of unread books.
description:         Please see README.md
homepage:            https://github.com/isaacazuelos/tsundoku#readme
license:             MIT
license-file:        LICENSE
author:              Isaac Azuelos
maintainer:          isaac@azuelos.ca
copyright:           2016 Isaac Azuleos
category:            App
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tsundoku.Book
                     , Tsundoku.IO
                     , Tsundoku.Pile
  build-depends:       base >= 4.7 && < 5
                     , text
                     , time
                     , aeson
                     , bytestring
                     , directory
                     , filepath
  default-language:    Haskell2010

executable tsundoku
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tsundoku
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Tsundoku.BookSpec
                     , Tsundoku.PileSpec
                     , Tsundoku.IOSpec
  build-depends:       base
                     , directory
                     , filepath
                     , hspec
                     , QuickCheck
                     , tsundoku
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/isaacazuelos/tsundoku
