name:                tsundoku
version:             0.1.0.0
synopsis:            Tsundoku tracks your piles of unread books.
description:         Please see README.md
homepage:            https://github.com/isaacazuelos/tsundoku#readme
license:             MIT
license-file:        LICENSE
author:              Isaac Azuelos
maintainer:          isaac@azuelos.ca
copyright:           2016 Isaac Azuleos
category:            App
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tsundoku.Book
                     , Tsundoku.IO
                     , Tsundoku.Pile
                     , Tsundoku.Pretty
                     , Tsundoku.Command
                     , Tsundoku.Command.Init
                     , Tsundoku.Command.List
                     , Tsundoku.Command.Add
                     , Tsundoku.Command.Path
                     , Tsundoku.Command.Remove
                     , Tsundoku.Command.Tag
                     , Tsundoku.Command.Details
                     , Tsundoku.Command.Status
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2 && < 2
                     , time >= 1.5 && < 2
                     , aeson >= 0.11 && <= 0.12
                     , bytestring >= 0.10 && <= 1
                     , directory >= 1.2 && <= 2
                     , semigroups >= 0.18 && <= 2
                     , filepath >= 1.4 && <= 2
                     , optparse-applicative >= 0.12 && <= 1
  default-language:    Haskell2010

executable doku
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tsundoku
                     , optparse-applicative >= 0.12 && <= 1
                     , text >= 1.2 && < 2
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Tsundoku.BookSpec
                     , Tsundoku.PileSpec
                     , Tsundoku.IOSpec
  build-depends:       base
                     , directory
                     , filepath
                     , hspec
                     , QuickCheck
                     , tsundoku
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/isaacazuelos/tsundoku
